# llm-virtual-brain

./: .dockerignore  .env.example  .gitignore  ACTIVAR_WEBHOOKS_LEADS.md  ARQUITECTURA_INTEGRACION.md  CONTRIBUTING.md  Dockerfile  EJEMPLO_FLUJO_LEADS_PASO_A_PASO.md  INSTRUCTIVO_CAMBIAR_CUENTA_PROFESIONAL.md  LICENSE  README.md  SETUP_QAMILUNA_META_GOOGLE.md  VERIFICACION_NEGOCIO_META.md  deploy.sh  docker-compose.yml  pyproject.toml  setup.py
brain/: README.md  __init__.py  config.py  connectors.py  connectors_executor.py  context.py  core.py  errors.py  prompts.py  providers.py  server.py  tokens.py
docs/: API_KEYS.md  CICLO_COMPLETO.md  DOCKER.md  GAS_LEADS_SNIPPET.gs  GAS_SNIPPET.gs  INFRAESTRUCTURA.md  PROVEEDORES.md  QS_MANAGER_SETUP.md  remote-control-presence.md
examples/: price_assistant_config.yaml  price_assistant_prompts.yaml
profiles/: creador.yaml  eisenhower.yaml  general.yaml  jarvis_internal.yaml  jarvis_meta.yaml  plantitas.yaml  precios.yaml  qamiluna_team.yaml
tests/: qamiluna_flow.py  qamiluna_history.json  qamiluna_ok.py  qamiluna_refine.py  qamiluna_test.py  qamiluna_tone.py  test_creator_flow.py  test_default_providers.py  test_live.py  test_qamiluna_content_guardrail.py  test_qamiluna_content_strategy_prompt.py  test_smoke.py  test_studio_facade.py
ui/: brain-chat.html  studio-manifest.json  studio.html
